# flux

./: .gitignore  Cargo.toml  turbo.toml
shaders/: crt-monitor-shader.wgsl  degauss-shader.wgsl  my-awesome-shader.wgsl
sprites/: dirt.ase  door_closed.ase  flux_sink.ase  flux_source.ase  harvester.aseprite  kiwi_idle.ase  kiwi_walking.ase  menu-option-selected.ase  menu-option.aseprite
src/: actor.rs  actor_manager.rs  background.rs  bound.rs  camera.rs  door.rs  flux.rs  harvester.rs  hud.rs  juice_particles.rs  level.rs  level_manager.rs  levels.rs  lever.rs  lib.rs  main_menu.rs  mainmenu.rs  particle_manager.rs  player.rs  rigid_body.rs  solid.rs  tile.rs  tilemap.rs  vector2.rs
src/levels/: level1.rs  level2.rs  level3.rs  level4.rs  mod.rs
