[package]
name = "flux"
version = "0.1.0"
edition = "2024"

[package.metadata.turbo]
user = "7a12bbf4-2f36-494b-979d-665f9adcee47"

[dependencies]
turbo = { version = "4.0.0-alpha.36", package = "turbo-genesis-sdk" }

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "allow" }
