[package]
name = "flux"
version = "0.1.0"
edition = "2024"

[package.metadata.turbo]
user = "c41cf920-e78a-48a1-995f-977bac977f0c"

[dependencies]
turbo = { version = "4.0.0-alpha.36", package = "turbo-genesis-sdk" }

[lib]
crate-type = ["cdylib"]

[lints.rust]
unexpected_cfgs = { level = "allow" }
